welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:8: error: value Orange is not a member of object java.awt.Color
 var o = Color.Orange
               ^FlowerPot:22: error: not found: value SetCouleurBrosse
  	 {SetCouleurBrosse(c);baisseBrosse;leveBrosse()
          ^